Agregando endpoint /inventarioClientes para obtener todos los objetos
